@@ -5,7 +5,6 @@ import javax.vecmath.Point3d;
 import javax.vecmath.Vector4d;
 
 import com.marginallyclever.convenience.StringHelper;
-import com.marginallyclever.robotOverlord.dhRobot.DHIKSolver;
 import com.marginallyclever.robotOverlord.dhRobot.DHKeyframe;
 import com.marginallyclever.robotOverlord.dhRobot.DHLink;
 import com.marginallyclever.robotOverlord.dhRobot.DHRobot;
@@ -33,8 +32,8 @@ public class DHIKSolver_SCARA extends DHIKSolver {
 	 */
 	@SuppressWarnings("unused")
 	@Override
-	public void solve(DHRobot robot,Matrix4d targetMatrix,DHKeyframe keyframe) {
-		DHLink link4 = robot.links.getLast();
+	public SolutionType solve(DHRobot robot,Matrix4d targetMatrix,DHKeyframe keyframe) {
+		DHLink link4 = robot.links.get(robot.links.size()-1);
 
 		Matrix4d targetPoseAdj = new Matrix4d(targetMatrix);
 		
@@ -50,8 +49,8 @@ public class DHIKSolver_SCARA extends DHIKSolver {
 		
 		Point3d p4 = new Point3d(m4.m03,m4.m13,m4.m23);
 
-		double a1 = robot.links.get(0).r;
-		double a2 = robot.links.get(1).r;
+		double a1 = robot.links.get(0).getR();
+		double a2 = robot.links.get(1).getR();
 		
 		double b = a1;
 		double a = a2;
@@ -74,7 +73,7 @@ public class DHIKSolver_SCARA extends DHIKSolver {
 		keyframe.fkValues[0]=Math.toDegrees(tau-phi2); 
 		
 		Point3d p3 = new Point3d(p4);
-		p3.z = robot.links.get(0).d;
+		p3.z = robot.links.get(0).getD();
 		Point3d p2 = new Point3d(Math.cos(phi),Math.sin(phi),p3.z);
 		
 		// the height
@@ -94,16 +93,12 @@ public class DHIKSolver_SCARA extends DHIKSolver {
 		
 		keyframe.fkValues[3] = Math.toDegrees(-Math.atan2(rY,rX));
 		
-		this.solutionFlag = DHIKSolver.ONE_SOLUTION;
-		
 		if(false) {
 			System.out.println("solution={"+StringHelper.formatDouble(keyframe.fkValues[0])+","+
 								keyframe.fkValues[1]+","+
 								keyframe.fkValues[2]+","+
 								StringHelper.formatDouble(keyframe.fkValues[3])+"}");
 		}
+		return SolutionType.ONE_SOLUTION;
 	}
-	
-	
-	public void solveWithSuggestion(DHRobot robot,Matrix4d targetMatrix,DHKeyframe keyframe,DHKeyframe suggestion) {}
 }
